# runrat

./: .gitignore  AGENTS.md  README.md
RunRat/: DashboardView.swift  Info.plist  RunRatApp.swift  StatusBarController.swift  SystemMetricsMonitor.swift
RunRat/Assets.xcassets/AppIcon.appiconset/: Contents.json
RunRat/Assets.xcassets/runRat0.imageset/: Contents.json
RunRat/Assets.xcassets/runRat2.imageset/: Contents.json
RunRat/Assets.xcassets/runRat3.imageset/: Contents.json
RunRat/Assets.xcassets/runRat4.imageset/: Contents.json
RunRat/Assets.xcassets/runRat5.imageset/: Contents.json
linux/: CMakeLists.txt  README.md
linux/packaging/: runrat.desktop
linux/src/: main.c
macos/: README.md
macos/RunRat/: AppDelegate.swift  RatIconRenderer.swift
macos/RunRat.xcodeproj/: project.pbxproj
macos/RunRat/Assets.xcassets/runRat1.imageset/: Contents.json
macos/scripts/: notarize-release.sh  package-release.sh
packaging/aur/: PKGBUILD  README.md
packaging/homebrew/: README.md
packaging/homebrew/Casks/: runrat.rb
scripts/: generate-rat-assets.swift
